martin-mbtiles/tests/snapshots/mbtiles__copy_and_convert@convert__flat-flat.snap
---
source: martin-mbtiles/tests/mbtiles.rs
expression: result
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "8C58185A2425C7F7E0694A40C895ADDF"  )',
    '(  "md-edit", "value - v1"  )',
    '(  "md-remove", "value - remove"  )',
    '(  "md-same", "value - same"  )',
]

[[]]
type = 'table'
tbl_name = 'tiles'
sql = '''
CREATE TABLE tiles (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  1, 0, 0, blob(same)  )',
    '(  1, 0, 1, blob(edit-v1)  )',
    '(  1, 1, 1, blob(remove)  )',
    '(  2, 0, 0, blob(z2-same)  )',
    '(  2, 0, 1, blob(z2-edit-v1)  )',
    '(  2, 1, 1, blob(z2-remove)  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles'
